Changes for 2.2.1rc1

New features:
....I..PS. [ZBXNEXT-1257] dropped support for UCD-SNMP (asaveljevs)

Bug fixes:
..F....... [ZBX-7311] fixed dragging of host interfaces (Ivo)
..F....... [ZBX-7272] fixed graph's grid with fixed Y axis MIN/MAX values (Eduard)
...G...... [ZBX-2008] added support of Audit Success/Failure severity for Security log (igors)
...G...... [ZBX-2008] implemented automatic loading of wevtapi.dll file and its functions (igors)
...G...... [ZBX-2008] improved performance of eventlog monitoring (igors)
..F....... [ZBX-7263] fixed validation of filter parameters in tr_status.php (Eduard)
..F....... [ZBX-7303] removed link to item configuration for discovered items in latest data screen (Eduard)
...G...... [ZBX-7289] added server address and port number to "no active checks on server" message (igors)
..F....... [ZBX-6920] fixed displaying of soft linked IT services (Eduard)
..F....... [ZBX-7037] added agent.hostname to the list of supported items (Pavels)
..F....... [ZBX-7317] removed unused code in popup.php (Ivo)

--------------------------------------------------------------------------------
Changes for 2.2.0

2.2.0rc2 was released as 2.2.0 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.0rc2

Bug fixes:
..F....... [ZBXNEXT-1371] fixed links in global search results to LLD discovery for non-admin users to say "Discovery" instead of "Discoveries" (Richlv)
........S. [ZBX-7304] fixed wrong SQL statement in processing of escalations (asaveljevs)

--------------------------------------------------------------------------------
Changes for 2.2.0rc1

New features:
..F....... [ZBXNEXT-1513] set autofocus for the event acknowledgement text field (Pavels)
........S. [ZBXNEXT-1998] added vmware.fullname[], vmware.version[] key support (wiper)
..F.I...S. [ZBXNEXT-1975] increased the size of alerts table message field to 64KB also on Oracle database (Pavels, wiper)