@@ -31,7 +31,6 @@
 .red	{ color: #DC0000; }
 .orange	{ color: #EE6000; }
 .blue	{ color: #0099FF; }
-.gold	{ color: #999900; }
 
 .normal { background-color: #AAFFAA !important; }
 
